--- a/product.html
+++ b/product.html
@@ -27,7 +27,7 @@
                 <a href=""><i class="fa-solid fa-cart-shopping fa-2xl"></i></a>
             </div>
             <i class="fa-solid fa-bag-shopping fa-2xl"></i>
-            <a href="main.html" class="homebtn"><h1>Pummart</h1></a>
+            <a href="index.html" class="homebtn"><h1>Pummart</h1></a>
             <input type="text" id="searchbox" name="searchbox" placeholder="Search">
             <button type="submit" id="searchbtn"><i class="fa-solid fa-magnifying-glass fa-xl"></i></button>
         </div>
