Update all file

--- a/product.html
+++ b/product.html
@@ -23,11 +23,13 @@
 
         <div class="header">
             <div class="icon">
-                <a href=""><i class="fa-solid fa-heart fa-2xl"></i></a>
+                <a href=""><i class="fa-solid fa-heart fa-2xl heart"></i></a>
                 <a href=""><i class="fa-solid fa-cart-shopping fa-2xl"></i></a>
             </div>
             <i class="fa-solid fa-bag-shopping fa-2xl"></i>
-            <a href="index.html" class="homebtn"><h1>Pummart</h1></a>
+            <a href="index.html" class="homebtn">
+                <h1>Pummart</h1>
+            </a>
             <input type="text" id="searchbox" name="searchbox" placeholder="Search">
             <button type="submit" id="searchbtn"><i class="fa-solid fa-magnifying-glass fa-xl"></i></button>
         </div>
@@ -41,18 +43,22 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="rightElem">
             <div class="rdesc">
                 <div>
                     <div class="rightText">Amount</div>
                 </div>
                 <div class="amtbtn">
                     <button type="button" class="amountbtn">-</button>
-                    <div class="amount"><p>10</p></div>
+                    <div class="amount">
+                        <input type="text" class="amountBox" name="searchbox" placeholder="Enter amount">
+                    </div>
                     <button type="button" class="amountbtn">+</button>
                 </div>
                 <div>
-                    <div class="rightText"><p>Price</p></div>
+                    <div class="rightText">
+                        <p>Price</p>
+                    </div>
                 </div>
                 <div>
                     <div class="priceText">1050 THB</div>
@@ -62,6 +68,8 @@
     </div>
     <div class="bottombtn">
         <button type="button" class="pinkbtn">Add to cart</button>
-        <button type="button" class="favbtn"><div class="fa-solid fa-heart fa-2xl"></button>
+        <button type="button" class="favbtn">
+            <div class="fa-solid fa-heart fa-2xl">
+        </button>
     </div>
 </body>
