--- a/wishlist.html
+++ b/wishlist.html
@@ -27,7 +27,7 @@
                 <a href=""><i class="fa-solid fa-cart-shopping fa-2xl"></i></a>
             </div>
             <i class="fa-solid fa-bag-shopping fa-2xl"></i>
-            <a href="main.html" class="homebtn">
+            <a href="index.html" class="homebtn">
                 <h1>Pummart</h1>
             </a>
             <input type="text" id="searchbox" name="searchbox" placeholder="Search">
