--- a/wishlist.html
+++ b/wishlist.html
@@ -23,8 +23,8 @@
 
         <div class="header">
             <div class="icon">
-                <a href=""><i class="fa-solid fa-heart fa-2xl heart"></i></a>
-                <a href=""><i class="fa-solid fa-cart-shopping fa-2xl"></i></a>
+                <a href="wishlist.html"><i class="fa-solid fa-heart fa-2xl heart"></i></a>
+                <a href="cart.html"><i class="fa-solid fa-cart-shopping fa-2xl"></i></a>
             </div>
             <i class="fa-solid fa-bag-shopping fa-2xl"></i>
             <a href="index.html" class="homebtn">
