updated all pages

--- a/cart.html
+++ b/cart.html
@@ -15,10 +15,10 @@
 <body>
     <div id="navbar">
         <div class="account-bar">
-            <ul>
-                <li><a href="">Login</a> <i class="fa fa-angle-down" aria-hidden="true"></i></li>
-                <li><a href="">Register</a> <i class="fa fa-angle-down" aria-hidden="true"></i></li>
-            </ul>
+            <div>
+                <a href="">Login</a> <i class="fa fa-angle-down" aria-hidden="true"></i>
+                <a href="">Register</a> <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </div>
         </div>
 
         <div class="header">
@@ -113,6 +113,9 @@
                     <a href=""><i class="fa-solid fa-trash fa-2xl"></i></a>
                 </div>
             </div>
+        </div>
+        <div class="checkoutBtn">
+            <a href="checkout.html"><button type="button" class="pinkbtn">Checkout</button></a>
         </div>
     </div>
 </body>
