--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div id="navbar">
         <div class="account-bar">
-            <ul>
-                <li><a href="">Login</a> <i class="fa fa-angle-down" aria-hidden="true"></i></li>
-                <li><a href="">Register</a> <i class="fa fa-angle-down" aria-hidden="true"></i></li>
-            </ul>
+            <div>
+                <a href="">Login</a> <i class="fa fa-angle-down" aria-hidden="true"></i>
+                <a href="">Register</a> <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </div>
         </div>
 
         <div class="header">
