--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Pummart</title>
+    <title>Product's Page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='product.css'>
@@ -15,10 +15,10 @@
 <body>
     <div id="navbar">
         <div class="account-bar">
-            <ul>
-                <li><a href="">Login</a> <i class="fa fa-angle-down" aria-hidden="true"></i></li>
-                <li><a href="">Register</a> <i class="fa fa-angle-down" aria-hidden="true"></i></li>
-            </ul>
+            <div>
+                <a href="">Login</a> <i class="fa fa-angle-down" aria-hidden="true"></i>
+                <a href="">Register</a> <i class="fa fa-angle-down" aria-hidden="true"></i>
+            </div>
         </div>
 
         <div class="header">
@@ -69,7 +69,9 @@
     <div class="bottombtn">
         <button type="button" class="pinkbtn">Add to cart</button>
         <button type="button" class="favbtn">
-            <div class="fa-solid fa-heart fa-2xl">
+            <div class="fa-solid fa-heart fa-2xl"></div>
         </button>
     </div>
 </body>
+
+</html>
