Finished html/css [Fonts not update]

--- a/checkout.html
+++ b/checkout.html
@@ -30,8 +30,10 @@
             <a href="index.html" class="homebtn">
                 <h1>Pummart</h1>
             </a>
-            <input type="text" id="searchbox" name="searchbox" placeholder="Search">
-            <button type="submit" id="searchbtn"><i class="fa-solid fa-magnifying-glass fa-xl"></i></button>
+            <div class="sbox">
+                <input type="text" id="searchbox" name="searchbox" placeholder="Search">
+                <button type="submit" class="searchbtn"><i class="fa-solid fa-magnifying-glass fa-xl"></i></button>
+            </div>
         </div>
     </div>
     <div class="vert">
