--- a/login.html
+++ b/login.html
@@ -15,8 +15,8 @@
     <div id="navbar">
         <div class="account-bar">
             <div>
-                <a href="login.html">Login</a></i>
-                <a href="">Register</a></i>
+                <a href="account.html">My Account</a></i>
+                <a href="index.html">Logout</a></i>
             </div>
         </div>
 
