--- a/wishlist.html
+++ b/wishlist.html
@@ -16,8 +16,8 @@
     <div id="navbar">
         <div class="account-bar">
             <div>
-                <a href="">Login</a> <i class="fa fa-angle-down" aria-hidden="true"></i>
-                <a href="">Register</a> <i class="fa fa-angle-down" aria-hidden="true"></i>
+                <a href="">Login</a></i>
+                <a href="">Register</a></i>
             </div>
         </div>
 
@@ -30,8 +30,10 @@
             <a href="index.html" class="homebtn">
                 <h1>Pummart</h1>
             </a>
-            <input type="text" id="searchbox" name="searchbox" placeholder="Search">
-            <button type="submit" id="searchbtn"><i class="fa-solid fa-magnifying-glass fa-xl"></i></button>
+            <div class="sbox">
+                <input type="text" id="searchbox" name="searchbox" placeholder="Search">
+                <button type="submit" class="searchbtn"><i class="fa-solid fa-magnifying-glass fa-xl"></i></button>
+            </div>
         </div>
     </div>
     <div class="vert">
