--- a/Web_Programming_FN_Proj-main/wishlist.html
+++ b/Web_Programming_FN_Proj-main/wishlist.html
@@ -16,8 +16,8 @@
     <div id="navbar">
         <div class="account-bar">
             <div>
-                <a href="">Login</a></i>
-                <a href="">Register</a></i>
+                <a href="login.html">Login</a></i>
+                <a href="register.html">Register</a></i>
             </div>
         </div>
 
@@ -39,7 +39,7 @@
     <div class="vert">
         <div class="wishlist">
             <div class="topic">
-                <p>Wishlists</p>
+                <p>Wish Lists</p>
             </div>
             <div>
                 <p class="pinktext">0 items</p>
