--- a/Web_Programming_FN_Proj-main/indexlogin.html
+++ b/Web_Programming_FN_Proj-main/indexlogin.html
@@ -15,8 +15,8 @@
     <div id="navbar">
         <div class="account-bar">
             <div>
-                <a href="indexlogin.html">Login</a></i>
-                <a href="register.html">Register</a></i>
+                <a href="account.html">My Account</a></i>
+                <a href="index.html">Logout</a></i>
             </div>
         </div>
 
@@ -158,6 +158,7 @@
                 </div>
             </div>
         </a>
+        
         <div class="border">
             <div class="product-image">
                 <img src="img/meat2.png" alt="">
