--- a/Web_Programming_FN_Proj-main/login.html
+++ b/Web_Programming_FN_Proj-main/login.html
@@ -7,6 +7,7 @@
     <title>Pummart</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='login.css'>
     <script src="https://kit.fontawesome.com/fed66b6b71.js" crossorigin="anonymous"></script>
     <script src='main.js'></script>
 </head>
@@ -15,8 +16,8 @@
     <div id="navbar">
         <div class="account-bar">
             <div>
-                <a href="account.html">My Account</a></i>
-                <a href="index.html">Logout</a></i>
+                <a href="login.html">Login</a></i>
+                <a href="register.html">Register</a></i>
             </div>
         </div>
 
@@ -26,260 +27,30 @@
                 <a href="cart.html"><i class="fa-solid fa-cart-shopping fa-2xl"></i></a>
             </div>
             <i class="fa-solid fa-bag-shopping fa-2xl"></i>
-            <a href="index.html" class="homebtn"><h1>Pummart</h1></a>
+            <a href="index.html" class="homebtn">
+                <h1>Pummart</h1>
+            </a>
             <div class="sbox">
                 <input type="text" id="searchbox" name="searchbox" placeholder="Search">
                 <button type="submit" class="searchbtn"><i class="fa-solid fa-magnifying-glass fa-xl"></i></button>
             </div>
         </div>
     </div>
-    <!--image-slider-starts-->
-    <div class="Ads">
-        <div class="slider">
-            <div class="slides">
-                <!--starts-->
-                <input type="radio" name="radio-btn" id="radio1">
-                <input type="radio" name="radio-btn" id="radio2">
-                <input type="radio" name="radio-btn" id="radio3">
-                <input type="radio" name="radio-btn" id="radio4">
-                <input type="radio" name="radio-btn" id="radio5">
-                <!--ends-->
-
-                <!--image-slide-starts-->
-                <div class="slide first">
-                    <img src="img/1.jpg" alt="">
-                </div>
-                <div class="slide">
-                    <img src="img/2.jpg" alt="">
-                </div>
-                <div class="slide">
-                    <img src="img/3.jpg" alt="">
-                </div>
-                <div class="slide">
-                    <img src="img/4.jpg" alt="">
-                </div>
-                <div class="slide">
-                    <img src="img/5.jpg" alt="">
-                </div>
-                <!--image-slide-ends-->
-
-                <!--automatic-nav-starts-->
-                <!-- <div class="slider-container"> -->
-                <div class="nav-auto">
-                    <div class="auto-btn1"></div>
-                    <div class="auto-btn2"></div>
-                    <div class="auto-btn3"></div>
-                    <div class="auto-btn4"></div>
-                    <div class="auto-btn5"></div>
-                </div>
-                <!--automatic-nav-ends-->
-                <!--manual-nav-starts-->
-                <div class="nav-manual">
-                    <label for="radio1" class="manual-btn"></label>
-                    <label for="radio2" class="manual-btn"></label>
-                    <label for="radio3" class="manual-btn"></label>
-                    <label for="radio4" class="manual-btn"></label>
-                    <label for="radio5" class="manual-btn"></label>
-                </div>
-                <!--manual-nav-ends-->
-                <!-- </div> -->
-            </div>
-
+    <div class="loginmain">
+        <div class="center">Login </div> <br>
+        <div class="Subject">Email Address <br>
+            <input type="text" name="email" id="email" placeholder="Enter email address" required><br><br>
+            Password<br>
+            <input type="text" name="password" id="password" placeholder="Enter Password" required minlength="8" maxlength="20"><br><br>
         </div>
-        <!--image-slider-ends-->
-    </div>
-
-    <div class="categories">
-        <figure>
-            <a href="">
-                <img src="img/Meat.png" alt="Meat"></i>
-                <figcaption>Meat</figcaption>
-            </a>
-        </figure>
-        <figure>
-            <a href="">
-                <img src="img/Lettuce.png" alt="Meat"></i>
-                <figcaption>Vegetable</figcaption>
-            </a>
-        </figure>
-        <figure>
-            <a href="">
-                <img src="img/Tea.png" alt="Meat"></i>
-                <figcaption>Tea</figcaption>
-            </a>
-        </figure>
-        <figure>
-            <a href="">
-                <img src="img/Plastic.png" alt="Meat"></i>
-                <figcaption>Beverage</figcaption>
-            </a>
-        </figure>
-        <figure>
-            <a href="">
-                <img src="img/Heinz Beans.png" alt="Meat"></i>
-                <figcaption>Snack</figcaption>
-            </a>
-        </figure>
-        <figure>
-            <a href="">
-                <img src="img/Peach.png" alt="Meat"></i>
-                <figcaption>Fruit</figcaption>
-            </a>
-        </figure>
-        <figure>
-            <a href="">
-                <img src="img/Cutlery.png" alt="Meat"></i>
-                <figcaption>Food</figcaption>
-            </a>
-        </figure>
-        <figure>
-            <a href="">
-                <img src="img/Sale.png" alt="Meat"></i>
-                <figcaption>Promotion</figcaption>
-            </a>
-        </figure>
-    </div>
-
-    <div class="product-list">
-        <a href="product.html">
-            <div class="border">
-                <div class="product-image">
-                    <img src="img/meat1.png" alt="">
-                </div>
-                <div class="product-details">
-                    <span class="pd-name">เนื้อหมูอนามัย เบทาโกร</span>
-                    <div class="details">
-                        <div class="details-image">
-                            <img src="img/Box.png" alt="">
-                            <span>10</span>
-                        </div>
-                        <span class="price">105-</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        
-        <div class="border">
-            <div class="product-image">
-                <img src="img/meat2.png" alt="">
-            </div>
-            <div class="product-details">
-                <span class="pd-name">ตับหมูอนามัย เบทาโกร</span>
-                <div class="details">
-                    <div class="details-image">
-                        <img src="img/Box.png" alt="">
-                        <span>10</span>
-                    </div>
-                    <span class="price">105-</span>
-                </div>
-            </div>
+        <div class="fgpasssword">
+            <a href="register.html">Forgot your password</a>
         </div>
-        <div class="border">
-            <div class="product-image">
-                <img src="img/meat3.png" alt="">
-            </div>
-            <div class="product-details">
-                <span class="pd-name">เนื่อหมูอนามัย เบทาโกร</span>
-                <div class="details">
-                    <div class="details-image">
-                        <img src="img/Box.png" alt="">
-                        <span>10</span>
-                    </div>
-                    <span class="price">105-</span>
-                </div>
-            </div>
-        </div>
-        <div class="border">
-            <div class="product-image">
-                <img src="img/meat4.png" alt="">
-            </div>
-            <div class="product-details">
-                <span class="pd-name">ซี่โครงหมูอนามัย เบทาโกร</span>
-                <div class="details">
-                    <div class="details-image">
-                        <img src="img/Box.png" alt="">
-                        <span>10</span>
-                    </div>
-                    <span class="price">105-</span>
-                </div>
-            </div>
-        </div>
-        <div class="border">
-            <div class="product-image">
-                <img src="img/meat5.png" alt="">
-            </div>
-            <div class="product-details">
-                <span class="pd-name">ปีกบนไก่อนามัย S-Pure</span>
-                <div class="details">
-                    <div class="details-image">
-                        <img src="img/Box.png" alt="">
-                        <span>10</span>
-                    </div>
-                    <span class="price">105-</span>
-                </div>
-            </div>
-        </div>
-        <div class="border">
-            <div class="product-image">
-                <img src="img/meat6.png" alt="">
-            </div>
-            <div class="product-details">
-                <span class="pd-name">น่องไก่อนามัย เบทาโกร</span>
-                <div class="details">
-                    <div class="details-image">
-                        <img src="img/Box.png" alt="">
-                        <span>10</span>
-                    </div>
-                    <span class="price">105-</span>
-                </div>
-            </div>
-        </div>
-        <div class="border">
-            <div class="product-image">
-                <img src="img/meat7.png" alt="">
-            </div>
-            <div class="product-details">
-                <span class="pd-name">ไก่อบละมุน Sun Valley</span>
-                <div class="details">
-                    <div class="details-image">
-                        <img src="img/Box.png" alt="">
-                        <span>10</span>
-                    </div>
-                    <span class="price">105-</span>
-                </div>
-            </div>
-        </div>
-        <div class="border">
-            <div class="product-image">
-                <img src="img/meat8.png" alt="">
-            </div>
-            <div class="product-details">
-                <span class="pd-name">เนื้อปลาสด เบทาโกร</span>
-                <div class="details">
-                    <div class="details-image">
-                        <img src="img/Box.png" alt="">
-                        <span>10</span>
-                    </div>
-                    <span class="price">105-</span>
-                </div>
-            </div>
-        </div>
-        <div class="border">
-            <div class="product-image">
-                <img src="img/meat9.png" alt="">
-            </div>
-            <div class="product-details">
-                <span class="pd-name">ขาไก่ เบทาโกร</span>
-                <div class="details">
-                    <div class="details-image">
-                        <img src="img/Box.png" alt="">
-                        <span>10</span>
-                    </div>
-                    <span class="price">105-</span>
-                </div>
-            </div>
+        <form action=acceptRule class="acptrule">
+            <input type="submit" id="submit" value="Submit">
+        </form>
+        <div class="notmb">
+            <p>Not a member yet? </p>
+            <a href="register.html">Register</a>
         </div>
     </div>
-</body>
-
-</html>
