--- a/Web_Programming_FN_Proj-main/product.html
+++ b/Web_Programming_FN_Proj-main/product.html
@@ -16,8 +16,8 @@
     <div id="navbar">
         <div class="account-bar">
             <div>
-                <a href="">Login</a> <i class="fa fa-angle-down" aria-hidden="true"></i>
-                <a href="">Register</a> <i class="fa fa-angle-down" aria-hidden="true"></i>
+                <a href="login.html">Login</a></i>
+                <a href="register.html">Register</a></i>
             </div>
         </div>
 
